fix(block-drawer): #MEN-1089 fix block drawer visibility

--- a/scss/moodle/drawer.scss
+++ b/scss/moodle/drawer.scss
@@ -195,7 +195,7 @@ body.headroom--pinned {
   }
 
   .drawercontent {
-    margin-top: 18px;
+    height: calc(100% - #{$navbar-height}) !important;
   }
 }
 
