--- a/scss/moodle/variables.scss
+++ b/scss/moodle/variables.scss
@@ -59,3 +59,5 @@ $size-lg: 1024px;
 $size-mobile: 767px;
 $size-md: 667px;
 $size-sm: 375px;
+
+$navbar-height: 70px;
